# cosmos-beginner

./: Cosmos_Intro_Slides_with_Images.pptx  cosmos-sdk.md  ignite.md  overview.md  run-node.md
smart-contract/: ReadMe.md
smart-contract/contract/: Cargo.toml
smart-contract/contract/src/: lib.rs
smart-contract/cw20xu/: Cargo.toml
smart-contract/cw20xu/src/: coin.rs  helper.rs  lib.rs  msg.rs  query.rs  receiver.rs
smart-contract/erc20/: Cargo.toml
smart-contract/erc20/src/: lib.rs  main.rs
