[package]
name = "erc20-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmwasm-std = "1.1.0"      # CosmWasm standard library
cosmwasm-schema = "0.11.0"   # Provides `cw_serde` macro for serialization
serde = { version = "1.0", features = ["derive"] }  # For serializing/deserializing types
serde_json = "1.0"           # For serializing data to/from JSON
schemars = "0.8"             # For generating JSON schema (used with `JsonSchema`)
