[package]
name = "erc20-contract"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmwasm-std = "1.3"
cosmwasm-storage = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.3"

[lib]
crate-type = ["cdylib"]